fixed footer spacing

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -18,9 +18,12 @@ body {
     font-size: 16px;
   }
 }
+
 .font-xs {
   font-size: 14px;
-  font-weight: 300;
+  &:not(.no-light) {
+    font-weight: 300;
+  }
 }
 
 p {
